Meta file update
 when the table is created the metadata file gets updated (but the index creation is not yet handled)