@@ -1,3 +1,6 @@
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
 import java.util.Hashtable;
 import java.util.Vector;
 public class Test {
@@ -8,23 +11,21 @@ public class Test {
 			htblColNameType.put("id", "java.lang.Integer");
 			htblColNameType.put("name", "java.lang.String");
 			htblColNameType.put("gpa", "java.lang.double");
-			
+
 
 			Hashtable htblColNameValue = new Hashtable( );
-			htblColNameValue.put("id", new Integer( 2343432 ));
+			htblColNameValue.put("id", Integer.valueOf( 2343432 ));
 			htblColNameValue.put("name", new String("Ahmed Noor" ) );
-			htblColNameValue.put("gpa", new Double( 0.95 ) );
+			htblColNameValue.put("gpa", Double.valueOf( 0.95 ) );
 
-         DBApp d = new DBApp();
-        // try {
-        //     d.createTable("sam", "id", htblColNameType);
-        // } catch (DBAppException e) {
-        //     // TODO Auto-generated catch block
-        //     e.printStackTrace();
-        // }
-         d.deleteTableFile("aby.class");
-        
-    
+			DBApp d = new DBApp();
 
-    }
+		try {
+			d.createTable("ashez", "id", htblColNameType);
+		} catch (DBAppException e) {
+			throw new RuntimeException(e);
+		}
+
+
+	}
 }
